<resources>
    <string name="app_name">GNSSTest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_nmea">NMEA</string>
    <string name="title_sky">SKY</string>
    <string name="title_snr">SNR</string>
    <string name="title_map">MAP</string>
    <string name="title_info">INFO</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="gps_not_supported">GPS Not Supported!</string>

    <string name="placeholder_value">---</string>

    <string name="text_cep_title">CEP</string>
    <string name="text_cep_ttff_label">TTFF</string>
    <string name="text_cep_acc_label">ACC</string>
    <string name="text_cep_max_label">MAX</string>
    <string name="text_cep_avg_label">AVG</string>
    <string name="text_cep_min_label">MIN</string>
    <string name="text_cep_p95_label">95%</string>
    <string name="text_cep_p67_label">67%</string>
    <string name="text_cep_p50_label">50%</string>
    <string name="text_cep_yled_label">Yled</string>
    <string name="text_cep_lat_label">Lat</string>
    <string name="text_cep_lon_label">Lon</string>
    <string name="text_cep_type_label">Type</string>

    <!-- status table text -->
    <string name="text_loc_ttff_txt">TTFF:</string>
    <string name="text_loc_acc_txt">ACC:</string>
    <string name="text_loc_lon_txt">Lon:</string>
    <string name="text_loc_lat_txt">Lat:</string>
    <string name="text_loc_alt_txt">Alt:</string>
    <string name="text_loc_speed_txt">Speed:</string>
    <string name="text_loc_time_txt">Time:</string>
    <string name="text_loc_date_txt">Date:</string>
    <string name="text_loc_view_txt">View:</string>
    <string name="text_loc_use_txt">Use:</string>
    <string name="text_loc_nmea_txt">NMEA:</string>

    <string name="text_loc_true_position">True Position</string>
    <string name="text_loc_avg_position">Avg Position</string>

    <string name="text_loc_default_time">00:00:00</string>
    <string name="text_loc_default_date">00/00/00</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_customization">Customization</string>
    <string name="pref_header_tracking">Tracking</string>
    <string name="pref_header_hot">Hot Start</string>
    <string name="pref_header_warm">Warm Start</string>
    <string name="pref_header_cold">Cold Start</string>

    <string name="pref_description_keep_screen">keep screen on when test</string>
    <string name="pref_title_keep_screen">Keep Screen</string>

    <string name="pref_description_nmea_record">Record NMEA message to /sdcard/GNSSTest</string>
    <string name="pref_title_nmea_record">NMEA Record</string>

    <string name="pref_description_raw_record">Record Measurements message to /sdcard/GNSSTest</string>
    <string name="pref_title_raw_record">Measurements Record</string>

    <string name="pref_title_test_notifications">Test Notifications</string>
    <string name="pref_description_test_notifications">Notifications when one test job done</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>


    <string name="pref_description_test_name">Test Name</string>
    <string name="pref_title_test_name">Test Name</string>
    <string name="pref_description_test_round">Test Round</string>
    <string name="pref_title_test_round">Test Round</string>
    <string name="pref_description_test_timeout">Test Timeout</string>
    <string name="pref_title_test_timeout">Test Timeout</string>
    <string name="pref_description_test_between">Test Between</string>
    <string name="pref_title_test_between">Test Between</string>
    <string name="pref_description_delete_aiding">Delete Aiding</string>
    <string name="pref_title_delete_aiding">Delete Aiding</string>
    <string name="pref_description_delete_aiding_data">Delete Aiding Data</string>
    <string name="pref_title_delete_aiding_data">Delete Aiding Data</string>
    <string name="pref_description_inject_time">Inject NTP time when start GPS</string>
    <string name="pref_title_inject_time">Inject Time</string>
    <string name="pref_description_true_location">True Location</string>
    <string name="pref_title_true_location">True Location</string>
    <string name="pref_description_true_location_lat">True Latitude</string>
    <string name="pref_title_true_location_lat">True Latitude</string>
    <string name="pref_description_true_location_lon">True Longitude</string>
    <string name="pref_title_true_location_lon">True Longitude</string>

    <string name="pref_default_cold_test_name">ColdStarts</string>
    <string name="pref_default_cold_test_round">20</string>
    <string name="pref_default_cold_test_timeout">180</string>
    <string name="pref_default_cold_test_between">0</string>

    <string name="pref_default_custom_test_name">Custom</string>
    <string name="pref_default_custom_test_round">1</string>
    <string name="pref_default_custom_test_timeout">0</string>
    <string name="pref_default_custom_test_between">0</string>


    <string name="pref_default_hot_test_name">HotStarts</string>
    <string name="pref_default_hot_test_round">50</string>
    <string name="pref_default_hot_test_timeout">60</string>
    <string name="pref_default_hot_test_between">0</string>

    <string name="pref_default_track_test_name">Tracking</string>
    <string name="pref_default_track_test_round">1</string>
    <string name="pref_default_track_test_timeout">0</string>
    <string name="pref_default_track_test_between">0</string>

    <string name="pref_default_warm_test_name">WarmStarts</string>
    <string name="pref_default_warm_test_round">20</string>
    <string name="pref_default_warm_test_timeout">180</string>
    <string name="pref_default_warm_test_between">0</string>
    <string name="pref_title_test_run_to_timeout">Run To Timeout</string>
    <string name="pref_description_test_run_to_timeout">Run to timeout</string>
    <string name="pref_title_device_name">Device Name</string>
    <string name="pref_description_device_name">Device Name</string>

    <!-- Strings related to Permission -->
    <string name="msg_request_permissions">Storage &amp; Location permissions are required.</string>
    <string name="msg_request_permissions_settings">Storage &amp; Location permissions are required. Do you want to go to app settings?</string>

    <string name="msg_exit_app">Press Back again to Exit.</string>
    <string name="msg_snack_bar_start_test">GPS Test Starting</string>
    <string name="msg_snack_bar_stop_test">GPS Test Stopping</string>
    <string name="msg_snack_bar_action">Action</string>
    <string name="msg_dialog_yes">Yes</string>
    <string name="msg_dialog_cancel">Cancel</string>


    <string name="sat_prn">200</string>
    <string name="sat_inuse">T</string>
    <string name="sat_azi">27</string>
    <string name="sat_elev">125</string>
    <string name="sat_snr">55</string>
    <string name="pref_title_hack_dual_frequency_support">Hack for dual Frequency Support</string>
    <string name="pref_description_hack_dual_frequency_support">Hack for support dual frequency SNR display</string>
    <string name="pref_title_gnss_test_profession_mode">Profession Mode</string>
    <string name="pref_description_gnss_test_profession_mode">Enable profession mode to do more customized test</string>
    <string name="pref_title_custom_nmea">Custom NMEA</string>
    <string name="pref_description_custom_nmea">Display custom NMEA in Home screen</string>
    <string name="pref_description_custom_nmea_display">Display</string>
    <string name="pref_title_custom_nmea_display">display</string>
    <string name="home_button_text_edit">Edit</string>
    <string name="home_button_text_save">Save</string>
    <string name="text_home_test_name">Test Name</string>
    <string name="text_home_test_round">Test Round</string>
    <string name="text_home_test_between">Test Between</string>
    <string name="text_home_test_timeout">Test Timeout</string>
    <string name="text_home_run_to_timeout">Run To Timeout</string>
    <string name="text_home_inject_xtra">Inject Xtra</string>
    <string name="text_home_inject_time">Inject Time</string>
    <string name="text_home_delete_ephemeris">EPH</string>
    <string name="text_home_delete_almanac">ALM</string>
    <string name="text_home_delete_position">POS</string>
    <string name="text_home_delete_time">TIME</string>
    <string name="text_home_delete_iono">IONO</string>
    <string name="text_home_delete_utc">UTC</string>
    <string name="text_home_delete_health">HEALTH</string>
    <string name="text_home_delete_svdir">SVDIR</string>
    <string name="text_home_delete_svsteer">SVSTEER</string>
    <string name="text_home_delete_sadata">SADATA</string>
    <string name="text_home_delete_rti">RTI</string>
    <string name="text_home_delete_celldb">CELL</string>
    <string name="text_home_true_latitude">True Latitude</string>
    <string name="text_home_true_longitude">True Longitude</string>


</resources>
