<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_snr"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/title_snr" />

    <item
        android:id="@+id/navigation_sky"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/title_sky" />

    <item
        android:id="@+id/navigation_result"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/title_info" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/title_map" />




</menu>
