<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="25dp"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageSatelliteFlag"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/textSatellitePrn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginStart="2dp"
            android:gravity="center"
            android:text="@string/sat_prn"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSnr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.5"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/barSatelliteSnr"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textSatelliteSnr"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/sat_snr"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textSatelliteAzi"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sat_elev"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textSatelliteElev"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sat_azi"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>